--- a/00PTutorial.ipynb
+++ b/00PTutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 181,
    "source": [
     "# OOP Tutorial 1\n",
     "class Employee:\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 182,
    "source": [
     "def fullname(self):\n",
     "        return '{} {}'.format(self.first, self.last)\n",
@@ -31,10 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 183,
    "source": [
     "# OOP Tutorial 2\n",
     "class Employee:\n",
+    "    \n",
+    "    num_of_emps = 0\n",
+    "    raise_amount = 1.04\n",
     "\n",
     "    def __init__(self, first, last, pay):\n",
     "        self.first = first\n",
@@ -45,15 +48,32 @@
     "    def fullname(self):\n",
     "        return '{} {}'.format(self.first, self.last)\n",
     "\n",
+    "    def apply_raise(self):\n",
+    "        self.pay = int(self.pay * self.raise_amount)\n",
+    "\n",
     "emp_1 = Employee('Shelby', 'Murdock', 50000)\n",
-    "emp_2 = Employee('Test', 'Employee', 60000)"
+    "emp_2 = Employee('Test', 'Employee', 60000)\n",
+    "\n",
+    "print(Employee.num_of_emps)\n",
+    "\n",
+    "#print(emp_1.raise_amount)\n",
+    "#print(emp_2.raise_amount)\n",
+    "#print(Employee.raise_amount)\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 184,
    "source": [
     "# OOP Tutorial 3\n",
     "class Employee:\n",
@@ -94,7 +114,7 @@
     "emp_1 = Employee('Shelby', 'Murdock', 50000)\n",
     "emp_2 = Employee('Test', 'Employee', 60000)\n",
     "\n",
-    "Employee.set_raise_amt(1.05)\n",
+    "emp_1.set_raise_amt(1.05)\n",
     "\n",
     "print(Employee.raise_amt)\n",
     "print(emp_1.raise_amt)\n",
@@ -136,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 185,
    "source": [
     "# OOP Tutorial 4\n",
     "class Employee:\n",
@@ -212,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 186,
    "source": [
     "# OOP Tutorial 5\n",
     "class Employee:\n",
@@ -264,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 187,
    "source": [
     "# OOP Tutorial 6\n",
     "class Employee:\n",
